--- a/testing.sagebrush.master/files.in
+++ b/testing.sagebrush.master/files.in
@@ -8,6 +8,7 @@ Grid_Inputs/grid_setup.in		# name of grid setup file
 Grid_Inputs/grid_disturbances.csv	# name of grid disturbances input file
 Grid_Inputs/grid_soils.csv		# name of grid soils input file
 Grid_Inputs/grid_initSpecies.csv	# name of grid species input file
+Grid_Inputs/grid_colonization.csv   # name of the colonization input file
 
 files.in				# name of stepwat files.in file
 Input/maxrgroupspecies.in     # name of stepwat maxrgroupspecies.in file
