--- a/testing.sagebrush.master/Grid_Inputs/grid_setup.in
+++ b/testing.sagebrush.master/Grid_Inputs/grid_setup.in
@@ -1,13 +1,10 @@
 # Grid setup for STEPWAT grid version - DLM 6-11-13
 
-2 2		# rows cols
-1		# use disturbances csv file (0 or 1)... 0 means no, 1 means yes
-1		# use soils csv file (0 or 1)... 0 means no, 1 means yes
-1		# use seed dispersal (0 or 1)... 0 means no, 1 means yes
-spinup  	# Initialization method. Options are "spinup", "seeds", or "none"
+2 2	# rows cols
+1	# use disturbances csv file. 1 means yes, 0 means no.
+1	# use soils csv file? 1 means yes, 0 means no.
+1	# use seed dispersal? 1 means yes, 0 means no.
+spinup  # Initialization method. Options are "spinup", "seeds", or "none"
 300     # Number of years to perform initialization (whichever method you choose). 
 1       # Write separate output files for each cell.
-
-#SEED DISPERSAL OUTPUTS
-0		# output seed dispersal summary file?  1 means yes, 0 means no
-,		# output separator. Valid options are: t = tab, s = space, or any single character such as , | : etc (excluding '#','t', and 's').  Suggested: tab.
+1	# output all seed dispersal events? 1 means yes, 0 means no.
