Renamed "initialization" module to "spinup"
And changed the code accordingly. (issue #448)

--- a/testing.sagebrush.master/Grid_Inputs/grid_setup.in
+++ b/testing.sagebrush.master/Grid_Inputs/grid_setup.in
@@ -4,7 +4,7 @@
 1	# use disturbances csv file. 1 means yes, 0 means no.
 1	# use soils csv file? 1 means yes, 0 means no.
 1	# use seed dispersal? 1 means yes, 0 means no.
-none  # Initialization method. Options are "spinup" or "none"
+1	# use spinup? 1 means yes, 0 means no.
 300     # Number of years to perform initialization (whichever method you choose). 
 1       # Write separate output files for each cell.
 1	# output all seed dispersal events? 1 means yes, 0 means no.
