--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/sxwprod_v2.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/sxwprod_v2.in
@@ -40,18 +40,16 @@
 #The above value would be converted to above ground biomass by sxwprod.in Biomass column
 
 # Group        Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep   Oct  Nov  Dec
-sagebrush      .38  .38  .38  .50  .72  .84  .94  1.0  .84  .72  .52   .46
-a.cool.forb    .00  .20  .50  .80  1.0  .80  .20  .20  .10  .00  .00   .00
-a.warm.forb    .00  .00  .20  .50  .72  .80  1.0  .90  .40  .20  .00   .00
-p.cool.forb    .00  .20  .50  .80  1.0  .60  .30  .20  .20  .10  .00   .00
-p.warm.forb    .00  .00  .10  .30  .50  .70  .90  1.0  .70  .30  .20   .00
-a.cool.grass   .20  .40  .60  .80  1.0  .50  .10  .10  .10  .20  .20   .20
-p.cool.grass   .20  .40  .60  .80  1.0  .80  .60  .40  .20  .20  .20   .20
-p.warm.grass   .20  .20  .20  .30  .50  .70  .90  1.0  .80  .40  .30   .20
-shrub	       .38  .38  .38  .50  .72  .84  .94  1.0  .84  .72  .52   .46
-succulents     .38  .38  .38  .50  .72  .84  .94  1.0  .84  .72  .52   .46
-#a.warm.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-
+sagebrush      .90  .90  .90  .95  .95  1.0  1.0  1.0  1.0  .95  .95   .90
+a.cool.forb    .00  .20  .50  .80  1.0  1.0  .50  .30  .20  .10  .00   .00
+a.warm.forb    .00  .00  .20  .50  .80  1.0  1.0  .50  .30  .20  .10   .00
+p.cool.forb    .50  .50  .50  .70  .90  1.0  1.0  1.0  .90  .70  .50   .50
+p.warm.forb    .50  .50  .50  .50  .70  .90  1.0  1.0  1.0  .90  .70   .50
+a.cool.grass   .50  .70  .90  1.0  1.0  .90  .90  .70  .50  .50  .50   .50
+p.cool.grass   .50  .50  .50  .70  0.9  1.0  1.0  1.0  .90  .70  .50   .50
+p.warm.grass   .50  .50  .50  .50  .70  .90  1.0  1.0  1.0  .90  .70   .50
+shrub	       .90  .90  .90  .95  .95  1.0  1.0  1.0  1.0  .95  .90   .90
+succulents     .95  .95  .95  .95  1.0  1.0  1.0  1.0  1.0  .95  .95   .95
 [end]  # section end
 
 # PCTLive
@@ -75,6 +73,5 @@ p.cool.grass   .00  .05  .10  .20  .40  .60  .20  .10  .05  .00  .00   .00
 p.warm.grass   .00  .00  .10  .20  .40  .60  .60  .60  .40  .20  .05   .00
 shrub          .00  .08  .20  .33  .57  .55  .50  .46  .32  .15  .08   .00
 succulents     .00  .00  .10  .20  .40  .60  .40  .60  .40  .20  .10   .00
-#a.warm.grass   .00  .00  .10  .20  .40  .60  .40  .20  .10  .05  .00   .00
 [end]  # section end
 
