--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/sxwphen.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/sxwphen.in
@@ -5,14 +5,13 @@
 # The name must be spelled exactly the same.
 
 # Group     	Jan   Feb   Mar  Apr  May  Jun  Jul  Aug  Sep   Oct   Nov   Dec
-sagebrush	   	.0125 .0125 .10  .125 .15  .25  .15  .10  .0625 .0125 .0125 .0125
-a.cool.forb	    .00	  .05   .10	 .20  .35  .20  .10	 .00  .00   .00   .00   .00
-a.warm.forb     .00	  .00   .00	 .10  .25  .30  .20  .10  .05   .00   .00   .00
-p.cool.forb	    .00	  .05   .10	 .20  .35  .20  .10	 .00  .00   .00   .00   .00
-p.warm.forb     .00	  .00   .00	 .10  .25  .30  .20  .10  .05   .00   .00   .00
-a.cool.grass	.05   .10   .15  .20  .30  .05  .00  .00  .00   .05   .05   .05
-p.cool.grass	.00   .05   .10  .20  .30  .20  .10  .05  .00   .00   .00   .00
-p.warm.grass	.00   .00   .00  .05  .15  .40  .20  .15  .05   .00   .00   .00
-shrub	   	    .00   .025  .10  .125 .15  .25  .15  .10  .0625 .0125 .025  .00
-succulents      .00   .00   .05  .10  .15  .17  .18  .15  .10   .05   .05   .00
-#a.warm.grass	.00   .00   .05  .10  .25  .35  .15  .10  .00   .00   .00   .00
+sagebrush	   	.10   .10   .30  .50  .90  1.0  1.0  .90  .50   .30	  .10   .10
+a.cool.forb	    .00	  .10   .50	 .70  1.0  .50  .10	 .10  .10   .00   .00   .00
+a.warm.forb     .00	  .00   .10	 .50  .70  1.0  .30  .10  .10   .10   .00   .00
+p.cool.forb	    .00	  .10   .30	 .50  1.0  1.0  .50	 .10  .10   .10   .00   .00
+p.warm.forb     .00	  .00   .10	 .30  .70  1.0  1.0  .50  .30   .10   .10   .00
+a.cool.grass	.10   .30   .50  1.0  .70  .50  .10  .00  .00   .10   .10   .10
+p.cool.grass	.00   .10   .30  .70  1.0  1.0  .50  .30  .10   .10   .00   .00
+p.warm.grass	.00   .00   .10  .10  .50  .70  1.0  1.0  .70   .30   .10   .00
+shrub	   	    .10   .10   .30  .50  .90  1.0  .90  .70  .50   .30   .10   .10
+succulents      .00   .00   .10  .20  .50  .90  1.0  .90  .50   .20   .10   .00
