--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/sxwroots1.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/sxwroots1.in
@@ -1,12 +1,11 @@
-#GrpName       %L1   %L2    %L3    %L4    %L5		%L6
-sagebrush      	.05	   .20	 .25	.25	   .35	   .05
-a.cool.forb		.40    .30	 .20	.10	   .00	   .00
-a.warm.forb		.40    .25	 .25	.10	   .00	   .00
-p.cool.forb		.15    .20	 .40	.20	   .05	   .00
-p.warm.forb		.15    .20	 .35	.25	   .05	   .00
-a.cool.grass    .40    .35   .15    .10    .00	   .00
-p.cool.grass    .20    .35   .25    .15	   .05     .00
-p.warm.grass 	.25    .25   .25    .20	   .05	   .00
-shrub			.15    .20	 .20	.35	   .10	   .00
-succulents       1      0     0      0      0		 0
-#a.warm.grass    .15    .40   .10    .05	   .00	   .00
+#GrpName       %L1   %L2    %L3    %L4    %L5		%L6		%L7
+sagebrush      	.20	   .40	 .50	.70	   .90	   1.0		1.0
+a.cool.forb		1.0    1.0	 .70	.00	   .00	   .00		.00
+a.warm.forb		1.0    1.0	 .70	.00	   .00	   .00		.00
+p.cool.forb		.40    1.0	 1.0	.30	   .10	   .00		.00
+p.warm.forb		.40    1.0	 1.0	.30	   .10	   .00		.00
+a.cool.grass    1.0    1.0   .70    .00    .00	   .00		.00
+p.cool.grass    .40    1.0   1.0    .30	   .10     .00		.00
+p.warm.grass 	.40    1.0   1.0    .30	   .10	   .00		.00
+shrub			.30    .50	 1.0	.70	   .30	   .00		.00
+succulents      1.0    .00   .00    .00    .00	   .00		.00
