Created new function to calculate MAXD
(issue #421)

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -176,28 +176,28 @@
 # MAXD = The maximum distance, in meters, a seed can travel.
 # PMD = Probability of Maximum Dispersal. The probability that a seed disperses MAXD meters
 #
-# name 	Use	MRS	PPTdry	PPTwet  HBar	HMax	MAXD	PMD	    HSlope
- artr	1	0.5	105     520 	0.01    40.0	30.0	0.005	0.5
- trdu 	0	0.5	105	    520 	0.01	40.0	3.00	0.005	0.5
- cryp 	0	0.5	105	    520 	0.01	40.0	3.00    0.005	0.5
- amre 	0	0.5	105	    520 	0.01	40.0	3.00    0.005	0.5
- chen 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- acmi 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- phho 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- arfr 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- lipu 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- brte 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- vuoc 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- pssp 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- koma 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- bogr 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- spcr 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- gusa 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- chvi 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
- oppo 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
+# name 	Use	MRS	PPTdry	PPTwet  HBar	HMax	PMD	HSlope
+ artr	1	0.5	105     520 	0.01    40.0	0.005	0.5
+ trdu 	0	0.5	105	520 	0.01	40.0	0.005	0.5
+ cryp 	0	0.5	105	520 	0.01	40.0	0.005	0.5
+ amre 	0	0.5	105	520 	0.01	40.0	0.005	0.5
+ chen 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ acmi 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ phho 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ arfr 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ lipu 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ brte 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ vuoc 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ pssp 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ koma 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ bogr 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ spcr 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ gusa 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ chvi 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+ oppo 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
 
-#spp1 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
-#spp2 	0	0.5	105 	520 	0.01	40.0	3.00	0.005	0.5
+#spp1 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
+#spp2 	0	0.5	105 	520 	0.01	40.0	0.005	0.5
 
 [end]	# this marks the end of the seed-dispersal parameters
 
