Update SOILWAT2 to v5.5.0
- close ##493 "Output depends on the time when the code is executed"

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "sw_src"]
 	path = sw_src
 	url = https://github.com/DrylandEcology/SOILWAT2.git
-	branch = bugfix_273_usertime
+	branch = master
         ignore = dirty
