--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/weathsetup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/weathsetup.in
@@ -3,9 +3,11 @@
 1			# 1 = simulate snow processes; 0 = no snow effects
 0.0			# % of snow drift per snow event (+ indicates snow addition, - indicates snow taken away from site)
 0.0			# % of snowmelt water as runoff/on per event (>0 indicates runoff, <0 indicates runon)
-1			# 0 = use historical data only; 1 = use markov process for missing weather
-1980			# first year to begin historical weather.
-5			# number of days to use in the running average of temperature.
+2			# 0 = use historical data only
+			# 1 = use weather generator for (partially) missing weather inputs
+			# 2 = use weather generator for all weather (don't check weather inputs)
+-1		# first year to begin historical weather
+			# if -1, then use first year of simulation (see `years.in`)
 
 # Monthly scaling parameters:
 # Month 1 = January, Month 2 = February, etc.
@@ -15,17 +17,16 @@
 # SkyCover = additive for mean monthly sky cover [%]; min(100, max(0, scale + sky cover))
 # Wind = multiplicative for mean monthly wind speed; max(0, scale * wind speed)
 # rH = additive for mean monthly relative humidity [%]; min(100, max(0, scale + rel. Humidity))
-# Transmissivity = multiplicative for mean monthly relative transmissivity; min(1, max(0, scale * transmissivity))
-#Mon   PPT    MaxT    MinT  SkyCover   Wind    rH    Transmissivity
-1    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-2    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-3    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-4    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-5    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-6    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-7    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-8    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-9    1.000    0.00    0.00       0.0    1.0   0.0               1.0
-10   1.000    0.00    0.00       0.0    1.0   0.0               1.0
-11   1.000    0.00    0.00       0.0    1.0   0.0               1.0
-12   1.000    0.00    0.00       0.0    1.0   0.0               1.0
+#Mon   PPT    MaxT    MinT  SkyCover   Wind    rH
+1    1.000    0.00    0.00       0.0    1.0   0.0
+2    1.000    0.00    0.00       0.0    1.0   0.0
+3    1.000    0.00    0.00       0.0    1.0   0.0
+4    1.000    0.00    0.00       0.0    1.0   0.0
+5    1.000    0.00    0.00       0.0    1.0   0.0
+6    1.000    0.00    0.00       0.0    1.0   0.0
+7    1.000    0.00    0.00       0.0    1.0   0.0
+8    1.000    0.00    0.00       0.0    1.0   0.0
+9    1.000    0.00    0.00       0.0    1.0   0.0
+10   1.000    0.00    0.00       0.0    1.0   0.0
+11   1.000    0.00    0.00       0.0    1.0   0.0
+12   1.000    0.00    0.00       0.0    1.0   0.0
