--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -171,25 +171,25 @@
 # MAXD = The maximum distance, in meters, a seed can travel.
 # PMD = Probability of Maximum Dispersal. The probability that a seed disperses MAXD meters
 #
-# name 	Use	MRS	PPTdry	PPTwet	HMax	PMD	HSlope
- artr	1	0.5	105     520 	240.0	0.005	0.00181
- trdu 	0	0.5	105		520 	25.0	0.005	0.8302
- cryp 	0	0.5	105		520 	25.0	0.005	0.8302
- amre 	0	0.5	105		520 	25.0	0.005	0.8302
- chen 	0	0.5	105 	520 	180.0	0.005	0.8302
- acmi 	0	0.5	105 	520 	25.0	0.005	0.8302
- phho 	0	0.5	105 	520 	4.0		0.005	0.8302
- arfr 	0	0.5	105 	520 	30.0	0.005	0.8302
- lipu 	0	0.5	105 	520 	30.0	0.005	0.8302
- brte 	0	0.5	105 	520 	90.0	0.005	0.7674
- vuoc 	0	0.5	105 	520 	40.0	0.005	0.7674
- pssp 	0	0.5	105 	520 	24.5	0.005	0.7674
- koma 	0	0.5	105 	520 	24.5	0.005	0.7674
- bogr 	0	0.5	105 	520 	12.0	0.005	4.4117
- spcr 	0	0.5	105 	520 	24.5	0.005	0.7674
- gusa 	0	0.5	105 	520 	40.0	0.005	0.00181
- chvi 	0	0.5	105 	520 	100.0	0.005	0.00181
- oppo 	0	0.5	105 	520 	40.0	0.005	0.8302
+# name 	Use	MRS		HMax	PMD		HSlope
+ artr	1	0.5	    240.0	0.005	0.00181
+ trdu 	0	0.5	 	25.0	0.005	0.8302
+ cryp 	0	0.5	 	25.0	0.005	0.8302
+ amre 	0	0.5	 	25.0	0.005	0.8302
+ chen 	0	0.5	 	180.0	0.005	0.8302
+ acmi 	0	0.5	 	25.0	0.005	0.8302
+ phho 	0	0.5	 	4.0		0.005	0.8302
+ arfr 	0	0.5	 	30.0	0.005	0.8302
+ lipu 	0	0.5	 	30.0	0.005	0.8302
+ brte 	0	0.5	 	90.0	0.005	0.7674
+ vuoc 	0	0.5	 	40.0	0.005	0.7674
+ pssp 	0	0.5	 	24.5	0.005	0.7674
+ koma 	0	0.5	 	24.5	0.005	0.7674
+ bogr 	0	0.5	 	12.0	0.005	4.4117
+ spcr 	0	0.5	 	24.5	0.005	0.7674
+ gusa 	0	0.5	 	40.0	0.005	0.00181
+ chvi 	0	0.5	 	100.0	0.005	0.00181
+ oppo 	0	0.5	 	40.0	0.005	0.8302
 
 [end]	# this marks the end of the seed-dispersal parameters
 
