Switch SOILWAT2 to branch `feature_nocommon`
- see https://github.com/DrylandEcology/SOILWAT2/pull/289

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "sw_src"]
 	path = sw_src
 	url = https://github.com/DrylandEcology/SOILWAT2.git
-	branch = master
+	branch = feature_nocommon
         ignore = dirty
