--- a/.gitignore
+++ b/.gitignore
@@ -60,12 +60,17 @@ testing/stepwat
 testing/valgrind.out
 testing/stepwat.dSYM/
 
+
 testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
 *.out
 *.log
 
-*/Output
-*/Stepwat_Inputs/Output
+*/Output*
+*/Stepwat_Inputs/Output*
+
+# Reference files (used for comparisons against devel branches)
+Input_*
+Fig_*
 
 # Netbeans project files
 #######################
