--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/siteparam.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/siteparam.in
@@ -73,6 +73,10 @@
 # Scenario
 RCP85
 
+# --- Soil characterization ---
+# Are inputs of density representing bulk soil (type 1) or the matric component (type 0)?
+0
+
 # ---- Transpiration regions ----
 # ndx  : 1=shallow, 2=medium, 3=deep, 4=very deep
 # layer: deepest layer number of the region.
