--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/weathsetup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/weathsetup.in
@@ -1,15 +1,25 @@
-# Weather setup parameters
-#
-1			# 1 = simulate snow processes; 0 = no snow effects
-0.0			# % of snow drift per snow event (+ indicates snow addition, - indicates snow taken away from site)
-0.0			# % of snowmelt water as runoff/on per event (>0 indicates runoff, <0 indicates runon)
+#------ Input file for weather-related parameters and weather generator settings
+
+#--- Activate/deactivate simulation of snow-related processes
+1			# 1 = do/don't simulate snow processes
+0.0			# snow drift/blowing snow (% per snow event): > 0 is adding snow, < 0 is removing snow
+0.0			# runoff/runon of snowmelt water (% per snowmelt event): > 0 is runoff, < 0 is runon
+
+
+#--- Activate/deactivate weather generator
 2			# 0 = use historical data only
 			# 1 = use weather generator for (partially) missing weather inputs
 			# 2 = use weather generator for all weather (don't check weather inputs)
+
+7			# Seed random number generator for weather generator (only used if SOILWAT2)
+			# (seed with 0 to use current time)
+
+#--- Historical daily weather inputs
 -1		# first year to begin historical weather
 			# if -1, then use first year of simulation (see `years.in`)
 
-# Monthly scaling parameters:
+
+#--- Monthly scaling parameters:
 # Month 1 = January, Month 2 = February, etc.
 # PPT = multiplicative for daily PPT; max(0, scale * ppt)
 # MaxT = additive for daily max temperature [C]; scale + maxtemp
