Update SOILWAT2 with new SWRC functionality
- SOILWAT2 has now multiple soil water release curves (SWRC) implemented
- updated SOILWAT2 submodule on branch release/devel_v7.0.0 to commit a6c367aef07b746a43b459067ee0ef0139f9f60b "Merge pull request #322 from DrylandEcology/feature_swrc"

-> new SOILWAT2 inputs include: swrc_name (to select a SWRC), ptf_name (to select a pedotransfer function if used), has_swrcp (logical to determine if SWRC parameters are used from new input file or calculated at run-time with selected PTF), and swrc_params (per soil layer parameters of the selected SWRC if used)
-> default values (swrc_name = Campbell1974, ptf_name = Cosby1984AndOthers, has_swrcp = FALSE) re-created previous behavior (except for a small fix for when soil moisture values occur above field capacity and below saturation levels)

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/files_SOILWAT2.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/files_SOILWAT2.in
@@ -8,6 +8,7 @@ Output/logfile.log	# errors or important info (can also be stdout)
 #Site
 Input/siteparam.in	# site parameters
 Input/soils.in	# soil layer definitions
+Input/swrc_params.in		# Input for soil water retention curve (used if pdf_type = 0, i.e., pedotransfer functions are not used)
 
 #Weather & climate
 Input/weathsetup.in	# weather parameters
