Wrap up updates for re-structured SOILWAT2
- set SOILWAT2 back to branch `release/devel_v7.0.0` (on commit 296f123e35836d29d59dbc5ec4974f7e55f9cfa7) that now includes the completed `feature_restructure`

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "sw_src"]
 	path = sw_src
 	url = https://github.com/DrylandEcology/SOILWAT2.git
-	branch = feature_restructure
+	branch = release/devel_v7.0.0
         ignore = dirty
