--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/estab.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/estab.in
@@ -1,13 +1,21 @@
-# list of filenames for which to check establishment
-# each filename pertains to a species and contains the 
+#------ Input file for (optional) plant establishment
+
+
+#--- Activate/deactivate plant establishment calculations
+
+0	# 1/0 = do/don't calculate and output establishment conditions
+
+
+#--- File names with establishment parameters (only used if activated)
+# Each file pertains to a species and contains the
 # soil moisture and timing parameters required for the
 # species to establish in a given year.
 # There is no limit to the number of files in the list.
-# to suppress checking establishment, comment all the 
-# lines below.
+# File names with paths relative to the SOILWAT2 directory (`_ProjDir`)
 
-0   # use flag; 1=check establishment, 0=don't check, ignore following
-bouteloua.estab
-#aristida.estab
-#vulpia.estab
-#opuntia.estab
+Input/estab/bouteloua.estab
+Input/estab/bromus.estab
+
+#Input/estab/aristida.estab
+#Input/estab/vulpia.estab
+#Input/estab/opuntia.estab
