Fixed Grazing Flag
Fixed grazing flag

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/bmassflags.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/bmassflags.in
@@ -61,7 +61,7 @@
 #         pr (above) is turned on.
 #         summary: average for the given year. Can only be
 #         output if GrpBmass is specified.
-# Grazing == if 'y', grazing averages will be output.
+# Grazing == if 'y' biomass removed by grazing will be outputted.
 # SppBmass == net biomass for each species for the year.
 #          If "head" is true, species names are output as
 #          the field names.
