Seed Dispersal Output and Flag #497
changing grid_setup.in description, fixing if statement mistake

--- a/testing.sagebrush.master/Grid_Inputs/grid_setup.in
+++ b/testing.sagebrush.master/Grid_Inputs/grid_setup.in
@@ -8,4 +8,8 @@
 300     # Number of years to perform spinup. 
 1       # Write separate output files for each cell.
 1	# output all seed dispersal events? 1 means yes, 0 means no.
-0   # output full seed dispersal output? 1 means yes, 0 means no.
+0   # output all dispersed seed data? 1 means yes and seeds will continuously recieve seeds
+    ## 0 means cell will not receive more seeds after its first
+
+
+
