Adjust code to SOILWAT2 v8.0.0
- Program gets instance of SW_DOMAIN
- Program no longer has an instance of PATH_INFO (now contained in SW_DOMAIN)

- Swap falls to `Mem_Free()` to language-provided `free()`
- Update calls to `min()`/`max()` to `MIN()/MAX()`
- Update top of *.c files with header files as needed like `stdlib.h` for `free()`

- New SOILWAT2 input files used only in SOILWAT2 for netCDF output method
	* Contained within folder "Stepwat_Inputs/Inputs/sxw/Input-nc" (SOILWAT2 uses "Input_nc" but STEPWAT2 has "Input_*" in .gitignore)
- New input file in files_SOILWAT2.in - Input/domain.in
- Renamed Input/years.in to Input/modelrun.in
- Updated other existing input files to hold moved/added information

- Update `SXW_Reinit()` to construct the output, pointers, and new domain information
- Update `main()` and `SXW_Reset()` to deconstruct the domain
- Replace `setGlobalSTEPWAT2_OutputVariables()` (removed) with `SW_OUT_construct_outarray()`
- Update any other function calls with appropriate parameter changes

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/files_SOILWAT2.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/files_SOILWAT2.in
@@ -1,8 +1,16 @@
 # List of input files for SOILWAT2
 # This is the first file read.
 
+#netCDF input - currently only for SOILWAT2
+Input-nc/files_nc.in
+Input-nc/desc_nc.in
+Input-nc/SW2_netCDF_output_variables.tsv
+
+#Domain
+Input/domain.in
+
 # Model
-Input/years.in	# years for model operation
+Input/modelrun.in	# years for model operation
 Output/logfile.log	# errors or important info (can also be stdout)
 
 #Site
