New input file for biomass quantile mapping
- Add new input file `biomass_qm.in`
- This file allows the user to provide points for STEPWAT2 and observed satellite biomass data
	* These points will be used to translate from STEPWAT2 biomass to a point somewhere in the observed data

Provided inputs:
- Number of annual and perennial points for satellite and STEPWAT2 points
- STEPWAT2 and satellite data for annual and perennial biomass

--- a/testing.sagebrush.master/Stepwat_Inputs/files.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/files.in
@@ -8,6 +8,7 @@ Input/plot.in		#for the plot
 Input/rgroup.in		#for the rgroup (resource-group-level information)
 Input/species.in	#for the species information
 
+Input/biomass_qm.in     #for the biomass quantile mapping
 Input/bmassflags.in	#biomass flags... (for setting up the output I think)
 Output/bmasspre.csv #output
 Output/bmassavg.csv	#output
