--- a/testing.sagebrush.master/Stepwat_Inputs/Input/biomass_qm.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/biomass_qm.in
@@ -1,8 +1,33 @@
 # Quantile mapping input file STEPPEWAT
 
+# Purpose: This file contains data to quantile map STEPWAT2 biomass
+# to the scale of data from the rangeland analysis platform (RAP).
+# This is to adjust biomass values prior to inputting the values
+# into the fire equation from Holdrege et al. 2024, which
+# was fit to RAP data. Note, this is only for adjusting
+# input to the fire equation, and does not effect biomass
+# elsewhere. 
+
+# Data source (update this description if values are updated): 
+# The quantiles provided below are based on the following--
+# interpolated STEPWAT2 biomass values of annual forbs and grasses (afgAGB) and
+# perennial forbs and grasses (pfgAGB), for simulations
+# run in November 2023 (fire1_eind1_c4grass1_co20),
+# all grazing levels were used (L, M, H, VH). Interpolated biomass
+# data (Renne multivariate matching algorithm) were used for calculating the quantiles ('Biomass_stepwat'). 
+# Interpolation was done using the same matching criteria
+# used in palmquist et al 2021 and Renne et al 2024. 
+# Only grid-cells that had a matching quality (euclidean distance) <0.5 and
+# that were also included in Holdrege et al. 2024 (Fire Ecology) were used. 
+# Quantiles of the RAP biomass data ('Biomass_rap') were calculated using running three year
+# (1 km) averages of biomass. The datafile from Holdrege et al. 2024 was
+# used for this, except only a subset of the grid cells were used (i.e., areas with good matching quality, see above).
+# A select number of quantiles were chosen, to limit the total number of quantiles needed,
+# while still representing the cumulative distribution function well.
+
 # Anything after the first pound sign is a comment
 # Blank lines, white space, and comments may be used freely,
-# however, the order of input is
+# however, the order of input (rows) is important.
 
 # Number of annual and perennial points that will be provided below and quantity must match
 # Note: These values must be > 2
@@ -10,8 +35,8 @@
 12         # Perennial biomass
 
 # Quantile = Dividing points within the dataset's probability curve
-# PFT = Specifies which type of grass the following points represent. This can only be afgABG (Annual) or pfgAGB (Perennial).
-# Biomass_rap = Observed satellite biomass data which stepwat biomass will be mapped to
+# PFT = Specifies which functional group the following points represent. This can only be afgABG (annuals) or pfgAGB (perennials).
+# Biomass_rap = Biomass from the rangeland analysis platform that stepwat biomass will be mapped to
 # Biomass_stepwat = Biomass data that STEPWAT2 uses to map from to Biomass_rap
 # Note: The data should be in increasing order for both annual and perennial biomass data
 # Quantile  PFT    Biomass_rap  Biomass_stepwat
