--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/domain.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/domain.in
@@ -26,6 +26,9 @@ ymin_bbox 39.59
 xmax_bbox -105.58
 ymax_bbox 39.59
 
+# Domain Coordinates
+SpatialTolerance 1e-6            # Tolerance used to identify matching domain space
+
 # Spinup
 SpinupMode      1               # Mode ( 1: repeated random resample; 2: sequence of m years ), default = 1
 SpinupScope     1               # Scope ( N ): use first N years of simulation, default = 1
