--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/soils.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/soils.in
@@ -1,26 +1,33 @@
-# Soil layer definitions
-# Location: 
-#
-# depth = (cm) lower limit of layer; layers must be in order of depth.
-# matricd = (g/cm^3) bulk density of soil in this layer.
-# gravel_content = the percent volume of each layer composed of gravel (i.e., particles > 2mm)
-# evco = (frac) proportion of total baresoil evap from this layer.
-# trco = (frac) proportion of total transpiration from this layer for each vegetation type (tree, forb, shrub, grass)
-# %sand = (frac) proportion of sand in layer (0-1.0).
-# %clay = (frac) proportion of clay in layer (0-1.0).
-# imperm = (frac) proportion of 'impermeability' to water percolation(/infiltration/drainage) in layer (0-1.0)
-# soiltemp = the initial temperature of each soil layer (in celcius), from the day before the simulation starts
-# Note that the evco and trco columns must sum to 1.0 or they will
-# be normalized.
-# Soil texture data for 3 top layers from Trace's MT data. Rest of soil texture from STATSGO.
-# Note: matricd, evco, soil temp for all soil layers from Bradford & Lauenroth 2006 Appendix.
+#------ Input for soil information: soil layer, soil texture, etc.
 
-# depth    matricd    gravel_content    evco    	trco_grass    		trco_shrub    trco_tree    		trco_forb    %sand    %clay    imperm    soiltemp
- 10.000      1.430      0.000          0.500        0.306575568         0.211234509        0.100        0.306575568    0.450    0.18     0.000       0.186
- 20.000      1.410      0.000          0.350        0.213538459         0.168060003        0.250        0.213538459    0.480    0.19     0.000       0.372
- 30.000      1.390      0.000          0.150        0.148735509         0.133709996        0.300        0.148735509    0.530    0.16     0.000       0.744
- 40.000      1.390      0.000          0.000        0.103598443         0.106380832        0.200        0.103598443    0.530    0.16     0.000       1.116
- 60.000      1.380      0.000          0.000        0.122420124         0.151975847        0.100        0.122420124    0.530    0.16     0.000       1.488
- 80.000      1.150      0.000          0.000        0.059392272         0.096199668        0.050        0.059392272    0.530    0.16     0.000       2.232
- 100.00      1.310      0.000          0.000        0.028814231         0.060893731        0.000        0.028814231    0.530    0.16     0.000       2.975
- 150.00      1.310      0.000          0.000        0.016925393         0.071545414        0.000        0.016925393    0.530    0.16     0.000       2.975
+# A table with up to `MAX_LAYERS` rows (soil layers) and 12 columns:
+#   - depth = (cm) lower limit of layer; layers must be in order of depth
+#   - matricd = (g / cm^3) soil density of the < 2 mm fraction
+#     (i.e., matric component)
+#   - gravel_content = (frac, 0-1) proportion of rocks/rock fragments/gravel
+#     by volume (i.e., particles > 2 mm)
+#   - evco = (frac, 0-1) proportion of potential bare soil evaporation
+#   - trco = (frac, 0-1) proportion of potential transpiration for each
+#     vegetation type (tree, forb, shrub, grass),
+#     e.g., estimated as proportion of active roots
+#   - %sand = (frac, 0-1) proportion of sand by weight
+#   - %clay = (frac, 0-1) proportion of clay by weight
+#   - imperm = (frac, 0-1) proportion of 'impermeability' to water
+#     percolation(/infiltration/drainage)
+#   - soiltemp = (C) initial temperature
+#   - %om = (frac, 0-1) proportion of organic matter by weight
+
+# USER: the evco and trco columns must sum to 1.0 or they will be normalized.
+
+# The minimum number of soil layers is 1 and the maximum number is `MAX_LAYERS`
+# which is defined in `SW_Defines.h`.
+
+# depth    matricd    gravel_content    evco    trco_grass    trco_shrub    trco_tree    trco_forb    %sand    %clay    imperm    soiltemp   %om
+  5.0      1.430      0.100          0.813        0.0496         0.134       0.0496        0.134    0.510    0.150     0.000      -1.000     0.0
+ 10.0      1.410      0.100          0.153        0.0495         0.094       0.0495        0.094    0.440    0.260     0.000      -1.000     0.0
+ 20.0      1.390      0.100          0.034        0.1006         0.176       0.1006        0.176    0.350    0.410     0.000      -1.000     0.0
+ 30.0      1.390      0.100          0.000        0.1006         0.175       0.1006        0.175    0.320    0.450     0.000      -1.000     0.0
+ 40.0      1.380      0.200          0.000        0.1006         0.110       0.1006        0.110    0.310    0.470     0.000       0.000     0.0
+ 60.0      1.150      0.200          0.000        0.1997         0.109       0.1997        0.109    0.320    0.470     0.000       0.000     0.0
+ 80.0      1.310      0.200          0.000        0.1997         0.101       0.1997        0.101    0.570    0.280     0.000       1.000     0.0
+100.0      1.310      0.200          0.000        0.1997         0.101       0.1997        0.101    0.570    0.280     0.000       1.000     0.0
