Update code to compile and run with SOILWAT2
- Update the codebase to match the newest version of SOILWAT2
	* Updated SOILWAT2 gains parallel capabilities using OpenMPI and is it's own mode
	* The text-based code has the same functionality but has slightly different outputs

Code files
- Update function call interfaces to match the new ones in SOILWAT2

SOILWAT2 input files
- `domain.in`
	* Gains new input - `MaxSimErrors` which specifies the maximum number of simulation errors before the program exists
		- NOTE: This option is only available in the parallel version of SOILWAT2, this input will not be used

- `weathsetup.in`
	* Gains three new input flags
		- Swap min/max air temperatures/relative humidity (if min > max)
		- Reset relative humidity and cloud cover to 100% if > 100%
		- Set observed extraterrestrial solar radiation if observed > extraterrestrial

- `veg.in`
	* Gains new input to specify calendar year that corresponds to the the vegetation inputs

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/weathsetup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/weathsetup.in
@@ -22,6 +22,11 @@
 1            # Wind speed
 1            # Relative humidity
 
+#--- Flags to fix small problems in weather inputs
+0           # Swap min/max if min > max (air temperature, relative humidity)
+0           # Reset percentages to 100% if > 100% (relative humidity, cloud cover)
+0           # Reset observed to extraterrestrial solar radiation if observed > extraterrestrial
+
 
 #--- Flags describing daily weather input files "weath.YYYY":
 # 0 = Variable is absent
