--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/veg.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/veg.in
@@ -78,6 +78,9 @@
 	25.158	25.158	25.158	25.158	# WUE Coeff1
 	-0.548	-0.548	-0.548	-0.548	# WUE Coeff2
 
+#------ Mean monthly biomass values
+# Spatial reference of biomass inputs (isBiomAsIf100Cover)
+1   # 0, values as is (at given cover); 1, values as if cover was 100%
 
 # Grasslands component:
 # -------------- Monthly production values ------------
